--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "5.2.2",
+    "bootstrap-vue-3": "^0.4.8",
     "core-js": "^3.8.3",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
